@@ -226,6 +226,7 @@ MONODLL_OBJECTS =  \
 	$(OBJS)\monodll_filtall.obj \
 	$(OBJS)\monodll_filtfind.obj \
 	$(OBJS)\monodll_fmapbase.obj \
+	$(OBJS)\monodll_fs_filter.obj \
 	$(OBJS)\monodll_fs_zip.obj \
 	$(OBJS)\monodll_hash.obj \
 	$(OBJS)\monodll_hashmap.obj \
@@ -342,6 +343,7 @@ MONOLIB_OBJECTS =  \
 	$(OBJS)\monolib_filtall.obj \
 	$(OBJS)\monolib_filtfind.obj \
 	$(OBJS)\monolib_fmapbase.obj \
+	$(OBJS)\monolib_fs_filter.obj \
 	$(OBJS)\monolib_fs_zip.obj \
 	$(OBJS)\monolib_hash.obj \
 	$(OBJS)\monolib_hashmap.obj \
@@ -459,6 +461,7 @@ BASEDLL_OBJECTS =  \
 	$(OBJS)\basedll_filtall.obj \
 	$(OBJS)\basedll_filtfind.obj \
 	$(OBJS)\basedll_fmapbase.obj \
+	$(OBJS)\basedll_fs_filter.obj \
 	$(OBJS)\basedll_fs_zip.obj \
 	$(OBJS)\basedll_hash.obj \
 	$(OBJS)\basedll_hashmap.obj \
@@ -560,6 +563,7 @@ BASELIB_OBJECTS =  \
 	$(OBJS)\baselib_filtall.obj \
 	$(OBJS)\baselib_filtfind.obj \
 	$(OBJS)\baselib_fmapbase.obj \
+	$(OBJS)\baselib_fs_filter.obj \
 	$(OBJS)\baselib_fs_zip.obj \
 	$(OBJS)\baselib_hash.obj \
 	$(OBJS)\baselib_hashmap.obj \
@@ -4549,6 +4553,9 @@ $(OBJS)\monodll_filtfind.obj: ..\..\src\common\filtfind.cpp
 $(OBJS)\monodll_fmapbase.obj: ..\..\src\common\fmapbase.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) $**
 
+$(OBJS)\monodll_fs_filter.obj: ..\..\src\common\fs_filter.cpp
+	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) $**
+
 $(OBJS)\monodll_fs_zip.obj: ..\..\src\common\fs_zip.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) $**
 
@@ -6508,6 +6515,9 @@ $(OBJS)\monolib_filtfind.obj: ..\..\src\common\filtfind.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) $**
 
 $(OBJS)\monolib_fmapbase.obj: ..\..\src\common\fmapbase.cpp
+	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) $**
+
+$(OBJS)\monolib_fs_filter.obj: ..\..\src\common\fs_filter.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) $**
 
 $(OBJS)\monolib_fs_zip.obj: ..\..\src\common\fs_zip.cpp
@@ -8474,6 +8484,9 @@ $(OBJS)\basedll_filtfind.obj: ..\..\src\common\filtfind.cpp
 $(OBJS)\basedll_fmapbase.obj: ..\..\src\common\fmapbase.cpp
 	$(CXX) -q -c -P -o$@ $(BASEDLL_CXXFLAGS) $**
 
+$(OBJS)\basedll_fs_filter.obj: ..\..\src\common\fs_filter.cpp
+	$(CXX) -q -c -P -o$@ $(BASEDLL_CXXFLAGS) $**
+
 $(OBJS)\basedll_fs_zip.obj: ..\..\src\common\fs_zip.cpp
 	$(CXX) -q -c -P -o$@ $(BASEDLL_CXXFLAGS) $**
 
@@ -8727,6 +8740,9 @@ $(OBJS)\baselib_filtfind.obj: ..\..\src\common\filtfind.cpp
 	$(CXX) -q -c -P -o$@ $(BASELIB_CXXFLAGS) $**
 
 $(OBJS)\baselib_fmapbase.obj: ..\..\src\common\fmapbase.cpp
+	$(CXX) -q -c -P -o$@ $(BASELIB_CXXFLAGS) $**
+
+$(OBJS)\baselib_fs_filter.obj: ..\..\src\common\fs_filter.cpp
 	$(CXX) -q -c -P -o$@ $(BASELIB_CXXFLAGS) $**
 
 $(OBJS)\baselib_fs_zip.obj: ..\..\src\common\fs_zip.cpp
