@@ -227,6 +227,7 @@ MONODLL_OBJECTS =  \
 	$(OBJS)\monodll_filtall.obj \
 	$(OBJS)\monodll_filtfind.obj \
 	$(OBJS)\monodll_fmapbase.obj \
+	$(OBJS)\monodll_fs_filter.obj \
 	$(OBJS)\monodll_fs_zip.obj \
 	$(OBJS)\monodll_hash.obj \
 	$(OBJS)\monodll_hashmap.obj \
@@ -348,6 +349,7 @@ MONOLIB_OBJECTS =  \
 	$(OBJS)\monolib_filtall.obj \
 	$(OBJS)\monolib_filtfind.obj \
 	$(OBJS)\monolib_fmapbase.obj \
+	$(OBJS)\monolib_fs_filter.obj \
 	$(OBJS)\monolib_fs_zip.obj \
 	$(OBJS)\monolib_hash.obj \
 	$(OBJS)\monolib_hashmap.obj \
@@ -471,6 +473,7 @@ BASEDLL_OBJECTS =  \
 	$(OBJS)\basedll_filtall.obj \
 	$(OBJS)\basedll_filtfind.obj \
 	$(OBJS)\basedll_fmapbase.obj \
+	$(OBJS)\basedll_fs_filter.obj \
 	$(OBJS)\basedll_fs_zip.obj \
 	$(OBJS)\basedll_hash.obj \
 	$(OBJS)\basedll_hashmap.obj \
@@ -578,6 +581,7 @@ BASELIB_OBJECTS =  \
 	$(OBJS)\baselib_filtall.obj \
 	$(OBJS)\baselib_filtfind.obj \
 	$(OBJS)\baselib_fmapbase.obj \
+	$(OBJS)\baselib_fs_filter.obj \
 	$(OBJS)\baselib_fs_zip.obj \
 	$(OBJS)\baselib_hash.obj \
 	$(OBJS)\baselib_hashmap.obj \
@@ -4882,6 +4886,9 @@ $(OBJS)\monodll_filtfind.obj: ..\..\src\common\filtfind.cpp
 $(OBJS)\monodll_fmapbase.obj: ..\..\src\common\fmapbase.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) $**
 
+$(OBJS)\monodll_fs_filter.obj: ..\..\src\common\fs_filter.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) $**
+
 $(OBJS)\monodll_fs_zip.obj: ..\..\src\common\fs_zip.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) $**
 
@@ -6841,6 +6848,9 @@ $(OBJS)\monolib_filtfind.obj: ..\..\src\common\filtfind.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) $**
 
 $(OBJS)\monolib_fmapbase.obj: ..\..\src\common\fmapbase.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) $**
+
+$(OBJS)\monolib_fs_filter.obj: ..\..\src\common\fs_filter.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) $**
 
 $(OBJS)\monolib_fs_zip.obj: ..\..\src\common\fs_zip.cpp
@@ -8807,6 +8817,9 @@ $(OBJS)\basedll_filtfind.obj: ..\..\src\common\filtfind.cpp
 $(OBJS)\basedll_fmapbase.obj: ..\..\src\common\fmapbase.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(BASEDLL_CXXFLAGS) $**
 
+$(OBJS)\basedll_fs_filter.obj: ..\..\src\common\fs_filter.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(BASEDLL_CXXFLAGS) $**
+
 $(OBJS)\basedll_fs_zip.obj: ..\..\src\common\fs_zip.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(BASEDLL_CXXFLAGS) $**
 
@@ -9060,6 +9073,9 @@ $(OBJS)\baselib_filtfind.obj: ..\..\src\common\filtfind.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(BASELIB_CXXFLAGS) $**
 
 $(OBJS)\baselib_fmapbase.obj: ..\..\src\common\fmapbase.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(BASELIB_CXXFLAGS) $**
+
+$(OBJS)\baselib_fs_filter.obj: ..\..\src\common\fs_filter.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(BASELIB_CXXFLAGS) $**
 
 $(OBJS)\baselib_fs_zip.obj: ..\..\src\common\fs_zip.cpp
